Should be final CMake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,8 @@
 #  You should have received a copy of the GNU General Public License
 #  along with this program; if not, see <http://www.gnu.org/licenses/>.
 ############################################################################
+set(NAME "basler")
+
 if(WIN32)
 	set(PYLON_ROOT "C:/Program Files/Basler/pylon 5/Development" CACHE PATH "location of pylon sdk")
 else()
@@ -44,106 +46,100 @@ endif()
 
 link_directories(${PYLON_ROOT}/genicam/bin/Linux64_x64)
 
-set(basler_srcs src/BaslerCamera.cpp src/BaslerInterface.cpp src/BaslerDetInfoCtrlObj.cpp
+set(${NAME}_srcs src/BaslerCamera.cpp src/BaslerInterface.cpp src/BaslerDetInfoCtrlObj.cpp
                 src/BaslerSyncCtrlObj.cpp src/BaslerRoiCtrlObj.cpp
                 src/BaslerBinCtrlObj.cpp src/BaslerVideoCtrlObj.cpp)
 
-file(STRINGS "VERSION" basler_ver)
-add_library(limabasler SHARED
-    ${basler_srcs}
+add_library(lima${NAME} SHARED
+    ${${NAME}_srcs}
 )
-target_include_directories(limabasler PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
-target_include_directories(limabasler PUBLIC "${PYLON_ROOT}/include")
+target_include_directories(lima${NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
+target_include_directories(lima${NAME} PUBLIC "${PYLON_ROOT}/include")
 if ("${PYLON_VERSION}" STREQUAL "3")
   if(WIN32)
-    target_include_directories(limabasler PUBLIC "${PYLON_ROOT}/../genicam/library/cpp/include")
+    target_include_directories(lima${NAME} PUBLIC "${PYLON_ROOT}/../genicam/library/cpp/include")
   else()
-    target_include_directories(limabasler PUBLIC "${PYLON_ROOT}/genicam/library/CPP/include")
+    target_include_directories(lima${NAME} PUBLIC "${PYLON_ROOT}/genicam/library/CPP/include")
   endif()
 endif()
 
-target_compile_definitions(limabasler PUBLIC USE_GIGE)
+target_compile_definitions(lima${NAME} PUBLIC USE_GIGE)
 if(WIN32)
-    target_compile_definitions(limabasler PRIVATE LIBBASLER_EXPORTS)
+    target_compile_definitions(lima${NAME} PRIVATE LIBBASLER_EXPORTS)
 endif()
 
 if ("${PYLON_VERSION}" STREQUAL "3")
   if (WIN32)
     set(PYLON_SUFFIX "_MD_VC100" CACHE STRING "Suffix used in Windows for naming Pylon files")
-    find_library(PYLONBASE PylonBase${PYLON_SUFFIX} ${PYLON_LIB_DIR})
-    find_library(PYLONGIGESUPP PylonGigE${PYLON_SUFFIX}_TL ${PYLON_LIB_DIR})
+    find_library(BASLER_PYLONBASE_LIB PylonBase${PYLON_SUFFIX} ${PYLON_LIB_DIR})
+    find_library(BASLER_PYLONGIGESUPP_LIB PylonGigE${PYLON_SUFFIX}_TL ${PYLON_LIB_DIR})
   else()
-    find_library(PYLONBASE pylonbase ${PYLON_ROOT}/lib ${PYLON_ROOT}/lib64)
-    find_library(PYLONGIGESUPP pylongigesupp ${PYLON_ROOT}/lib ${PYLON_ROOT}/lib64)
+    find_library(BASLER_PYLONBASE_LIB pylonbase ${PYLON_ROOT}/lib ${PYLON_ROOT}/lib64)
+    find_library(BASLER_PYLONGIGESUPP_LIB pylongigesupp ${PYLON_ROOT}/lib ${PYLON_ROOT}/lib64)
   endif()
   
-  if (("${PYLONBASE}" STREQUAL "PYLONBASE-NOTFOUND") OR ("${PYLONGIGESUPP}" STREQUAL "PYLONGIGESUPP-NOTFOUND"))
-    message(FATAL_ERROR "pylonbase or pylongige not found")
+  if (("${BASLER_PYLONBASE_LIB}" STREQUAL "BASLER_PYLONBASE_LIB-NOTFOUND") OR ("${BASLER_PYLONGIGESUPP_LIB}" STREQUAL "BASLER_PYLONGIGESUPP_LIB-NOTFOUND"))
+    message(FATAL_ERROR "${NAME} : pylonbase or pylongige not found")
   endif()
 #if("${PYLON_VERSION}" STREQUAL "5")
 else()
   if (WIN32)
     set(PYLON_SUFFIX "_MD_VC120" CACHE STRING "Suffix used in Windows for naming Pylon files")
-    find_library(PYLONBASE PylonBase${PYLON_SUFFIX}_v5_0 ${PYLON_LIB_DIR})
+    find_library(BASLER_PYLONBASE_LIB PylonBase${PYLON_SUFFIX}_v5_0 ${PYLON_LIB_DIR})
   else()
-    find_library(PYLONBASE pylonbase ${PYLON_ROOT}/lib ${PYLON_ROOT}/lib64)
+    find_library(BASLER_PYLONBASE_LIB pylonbase ${PYLON_ROOT}/lib ${PYLON_ROOT}/lib64)
   endif()
 
-  if (("${PYLONBASE}" STREQUAL "PYLONBASE-NOTFOUND"))
-    message(FATAL_ERROR "pylonbase not found")
+  if (("${BASLER_PYLONBASE_LIB}" STREQUAL "BASLER_PYLONBASE_LIB-NOTFOUND"))
+    message(FATAL_ERROR "${NAME} : pylonbase not found")
   endif()  
 endif()
 
 if (WIN32)
-  target_link_libraries(limabasler ws2_32)
+  target_link_libraries(lima${NAME} ws2_32)
 endif()
-target_link_libraries(limabasler limacore)
-target_link_libraries(limabasler ${PYLONBASE})
+target_link_libraries(lima${NAME} limacore)
+target_link_libraries(lima${NAME} ${BASLER_PYLONBASE_LIB})
 if ("${PYLON_VERSION}" STREQUAL "3")
-  target_link_libraries(limabasler ${PYLONGIGESUPP})
+  target_link_libraries(lima${NAME} ${BASLER_PYLONGIGESUPP_LIB})
 endif()
 
 if(WIN32)
   if ("${PYLON_VERSION}" STREQUAL "3")
-    find_library(PYLONGUI PylonGUI${PYLON_SUFFIX} ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
-    find_library(PYLONUTILITY PylonUtility${PYLON_SUFFIX} ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
-    find_library(PYLONBOOTSTRAPPER PylonBootstrapper ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
-    find_library(PYLONGCBASE GCBase${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
-    find_library(PYLONGENAPI GenApi${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
-    find_library(PYLONMATHPARSER MathParser${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
-    find_library(PYLONLOG Log${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
-    find_library(PYLONLOG4CPP log4cpp${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
-    find_library(PYLONLOG4CPPSTATIC log4cpp-static${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
-    find_library(PYLONCLALLSERIAL CLAllSerial${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
-    find_library(PYLONCLPROTOCOL CLProtocol${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
-    find_library(PYLONCLSERCOM CLSerCOM ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
-    target_link_libraries(limabasler ${PYLONGUI} ${PYLONUTILITY} ${PYLONBOOTSTRAPPER} ${PYLONGCBASE} ${PYLONGENAPI} ${PYLONMATHPARSER} ${PYLONLOG} ${PYLONLOG4CPP} ${PYLONLOG4CPPSTATIC} ${PYLONCLALLSERIAL} ${PYLONCLPROTOCOL} ${PYLONCLSERCOM})
+    find_library(BASLER_PYLONGUI_LIB PylonGUI${PYLON_SUFFIX} ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
+    find_library(BASLER_PYLONUTILITY_LIB PylonUtility${PYLON_SUFFIX} ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
+    find_library(BASLER_PYLONBOOTSTRAPPER_LIB PylonBootstrapper ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
+    find_library(BASLER_PYLONGCBASE_LIB GCBase${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
+    find_library(BASLER_PYLONGENAPI_LIB GenApi${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
+    find_library(BASLER_PYLONMATHPARSER_LIB MathParser${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
+    find_library(BASLER_PYLONLOG_LIB Log${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
+    find_library(BASLER_PYLONLOG4CPP_LIB log4cpp${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
+    find_library(BASLER_PYLONLOG4CPPSTATIC_LIB log4cpp-static${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
+    find_library(BASLER_PYLONCLALLSERIAL_LIB CLAllSerial${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
+    find_library(BASLER_PYLONCLPROTOCOL_LIB CLProtocol${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
+    find_library(BASLER_PYLONCLSERCOM_LIB CLSerCOM ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
+    target_link_libraries(lima${NAME} ${BASLER_PYLONGUI_LIB} ${BASLER_PYLONUTILITY_LIB}	${BASLER_PYLONBOOTSTRAPPER_LIB} ${BASLER_PYLONGCBASE_LIB} ${BASLER_PYLONGENAPI_LIB} ${BASLER_PYLONMATHPARSER_LIB} ${BASLER_PYLONLOG_LIB} ${BASLER_PYLONLOG4CPP_LIB}	${BASLER_PYLONLOG4CPPSTATIC_LIB} ${BASLER_PYLONCLALLSERIAL_LIB}	${BASLER_PYLONCLPROTOCOL_LIB} ${BASLER_PYLONCLSERCOM_LIB})
   else()
-    find_library(PYLONGUI PylonGUI${PYLON_SUFFIX}_v5_0  ${PYLON_LIB_DIR})
-    find_library(PYLONUTILITY PylonUtility${PYLON_SUFFIX}_v5_0  ${PYLON_LIB_DIR})
-    find_library(PYLONGCBASE GCBase${PYLON_SUFFIX}_v3_0_Basler_pylon_v5_0 ${PYLON_LIB_DIR})   
-    find_library(PYLONGENAPI GenApi${PYLON_SUFFIX}_v3_0_Basler_pylon_v5_0 ${PYLON_LIB_DIR})
-    target_link_libraries(limabasler ${PYLONGUI} ${PYLONUTILITY} ${PYLONGCBASE} ${PYLONGENAPI})     
+    find_library(BASLER_PYLONGUI_LIB PylonGUI${PYLON_SUFFIX}_v5_0  ${PYLON_LIB_DIR})
+    find_library(BASLER_PYLONUTILITY_LIB PylonUtility${PYLON_SUFFIX}_v5_0  ${PYLON_LIB_DIR})
+    find_library(BASLER_PYLONGCBASE_LIB GCBase${PYLON_SUFFIX}_v3_0_Basler_pylon_v5_0 ${PYLON_LIB_DIR})   
+    find_library(BASLER_PYLONGENAPI_LIB GenApi${PYLON_SUFFIX}_v3_0_Basler_pylon_v5_0 ${PYLON_LIB_DIR})
+    target_link_libraries(lima${NAME} ${BASLER_PYLONGUI_LIB} ${BASLER_PYLONUTILITY_LIB} ${BASLER_PYLONGCBASE_LIB} ${BASLER_PYLONGENAPI_LIB})     
   endif()
 endif()
   
   
-set_target_properties(limabasler PROPERTIES VERSION ${basler_ver} SOVERSION "1")
-
+include(CameraVERSION)
 if(WIN32)
-    set_target_properties(limabasler PROPERTIES PREFIX "lib")
-endif()
-
-if(WIN32)
-    install(TARGETS limabasler
+    set_target_properties(lima${NAME} PROPERTIES PREFIX "lib")
+    install(TARGETS lima${NAME}
             DESTINATION lib)
 else()
-    install(TARGETS limabasler
+    install(TARGETS lima${NAME}
             LIBRARY DESTINATION lib)
 endif()
 
-if(COMPILE_SIP)
-    set(NAME "basler")
+if(LIMA_ENABLE_PYTHON)
     include(CameraRunSIP)
     install(FILES python/__init__.py DESTINATION "${PYTHON_SITE_PACKAGES_DIR}/Lima/Basler")
 endif()
