Using functions in new cmake file instead of including different cmake files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,6 +140,6 @@ else()
 endif()
 
 if(LIMA_ENABLE_PYTHON)
-    include(CameraRunSIP)
+    limatools_run_sip_for_camera(${NAME})
     install(FILES python/__init__.py DESTINATION "${PYTHON_SITE_PACKAGES_DIR}/Lima/Basler")
 endif()
