CI test for basler

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ build :
     - ./install_lima_submodule
     - tar zxvf lib_for_lima/pylon-5.0.1.6388-x86_64.tar.gz
     - cd pylon-5.0.1.6388-x86_64
-    - sudo tar -C /opt -xzf pylonSDK*.tar.gz
+    - tar -C /opt -xzf pylonSDK*.tar.gz
     - cd ../lima/camera/basler
     - cp -R ../../../lima-camera-basler/* .
     - cd ../..
