--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,21 +15,21 @@ build :
     - cp -R ../../../lima-camera-basler/* .
     - cd ../..
     - ./install.sh camera/basler python tests
-    - cd ../lima-camera-basler
-    - cp -R ../lima .
-  artifacts:
-    paths:
-    - lima/
+    - cd cmake-build/
+    - ctest --timeout 10
+#  artifacts:
+#    paths:
+#    - lima/
   only:
     - cmake
     
-test :
-  stage: test
-  dependencies:
-    - build
-  script:
-    - pwd
-    - cd lima/cmake-build/
-    - ctest --timeout 10
-  only:
-    - cmake
+#test :
+#  stage: test
+#  dependencies:
+#    - build
+#  script:
+#    - pwd
+#    - cd lima/cmake-build/
+#    - ctest --timeout 10
+#  only:
+#    - cmake
