--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,4 @@
+
 stages:
   - build
   - test
@@ -14,7 +15,7 @@ build :
     - cd ../lima/camera/basler
     - cp -R ../../../lima-camera-basler/* .
     - cd ../..
-    - ./install.sh camera/basler python tests
+    - ./install.sh camera/basler python tests cbf fits edflz4 tiff hdf5 config
     - cd ../lima-camera-basler
     - cp -R ../lima .
   artifacts:
