--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,37 +1,75 @@
-
 stages:
   - build
-  - test
+  - deploy
 
-build :
+build-linux:
   stage: build
   script:
-    - cd ..
-    - cp -R /root/* .
-    - ./install_lima_submodule
-    - tar zxvf lib_for_lima/pylon-5.0.1.6388-x86_64.tar.gz
-    - cd pylon-5.0.1.6388-x86_64
-    - tar -C /opt -xzf pylonSDK*.tar.gz
-    - cd ../lima/camera/basler
-    - cp -R ../../../lima-camera-basler/* .
-    - cd ../..
-    - ./install.sh camera/basler python tests cbf fits tiff hdf5 config
-    - cd ../lima-camera-basler
-    - cp -R ../lima .
+    - conda build ./conda/camera --prefix-length=80 --output-folder=dist/ --channel=http://bcu-ci.esrf.fr/stable
   artifacts:
     paths:
-    - lima/
-  only:
-    - cmake
-    
-test :
-  stage: test
-  dependencies:
-    - build
+      - dist/
+  tags:
+    - conda
+    - linux
+
+build-win:
+  stage: build
   script:
-    - cd ..
-    - cp -R lima-camera-basler/lima .
-    - cd lima/cmake-build/
-    - ctest --timeout 10
+    - conda build ./conda/camera --prefix-length=80 --output-folder=dist/ --channel=http://bcu-ci.esrf.fr/stable
+  artifacts:
+    paths:
+      - dist/
+  tags:
+    - conda
+    - win
+
+build-noarch:
+  stage: build
+  script:
+    - conda build ./conda/tango --prefix-length=80 --output-folder=dist/ --channel=http://bcu-ci.esrf.fr/stable
+  artifacts:
+    paths:
+      - dist/
+  tags:
+    - conda
+
+deploy_devel:
+  stage: deploy
+  environment:
+    name: devel/$CI_COMMIT_REF_NAME
+    url: http://bcu-ci.esrf.fr/devel
+  dependencies:
+    - build-linux
+    - build-win
+    - build-noarch
+  script:
+    - cp -Rf dist/* /conda-devel/
+    - conda index /conda-devel/
+  tags:
+    - conda
+    - linux
   only:
-    - cmake
+    - branches
+  except:
+    - stable
+  when: manual
+
+deploy_stable:
+  stage: deploy
+  environment:
+    name: production
+    url: http://bcu-ci.esrf.fr/stable
+  dependencies:
+    - build-linux
+    - build-win
+    - build-noarch
+  script:
+    - cp -Rf dist/* /conda/
+    - conda index /conda/
+  tags:
+    - conda
+    - linux
+  only:
+    - tags
+    - stable
