Update to SIP 4.19 and build for python 2 on Linux

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - build
+  - build-noarch
   - deploy
 
 .build-conda: &build-conda
@@ -26,8 +27,12 @@ build-win:
 
 build-noarch:
   <<: *build-conda
+  stage: build-noarch
   script:
     - conda build ./conda/tango --prefix-length=80 --output-folder=dist/ --channel=http://bcu-ci.esrf.fr/stable
+  dependencies:
+    - build-linux
+    - build-win
 
 deploy-devel:
   stage: deploy
