--- a/conda/camera/meta.yaml
+++ b/conda/camera/meta.yaml
@@ -1,4 +1,9 @@
-{% set version = GIT_DESCRIBE_TAG[1:] %}
+# Strip the 'v' from the version tag
+{% if GIT_DESCRIBE_TAG is defined %}
+{%   set version = GIT_DESCRIBE_TAG[1:] %}
+{% else %}
+{%   set version = "0.0.0" %}
+{% endif %}
 
 package:
   name: lima-camera-basler
